feat: lista de tarefas e estilos iniciais

--- a/css/menu/menu.css
+++ b/css/menu/menu.css
@@ -1,13 +1,13 @@
-.menu h2,
-.menu p,
-.imagem,
-.menu li {
-  margin-bottom: 20px;
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
   text-align: center;
 }
 
 .menu p {
   max-width: 250px;
+  align-self: center;
 }
 
 .menu a {
@@ -15,10 +15,10 @@
   padding: 4px 16px;
   border: 1px solid var(--cor-2);
   border-radius: 4px;
-  color: var(--cor-4);
+  color: var(--cor-0);
+  margin-bottom: 25px;
 }
 
 .menu a:hover {
   background-color: var(--cor-2);
-  color: var(--cor-0);
 }
