--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,5 @@
 /* menu */
 @import "./menu/menu.css";
 
-/* lista */
-@import "./lista/lista.css";
+/* tarefas */
+@import "./tarefas/tarefas.css";
