--- a/css/utilidades/cores.css
+++ b/css/utilidades/cores.css
@@ -1,7 +1,10 @@
 :root {
   --cor-1: #eff9f0;
-  --cor-2: #0064b0;
-  --cor-3: #00457a;
-  --cor-4: #04e824;
-  --cor-5: #000;
+  --cor-2: #f3d979;
+  --cor-3: #f5c93d;
+  --cor-4: #f7b801;
+  --cor-5: #0064b0;
+  --cor-6: #005595;
+  --cor-7: #00457a;
+  --cor-8: #000;
 }
