--- a/css/tarefas/tarefas.css
+++ b/css/tarefas/tarefas.css
@@ -1,9 +1,15 @@
 .tarefas-conteudo {
-  background-color: var(--cor-2);
+  background: linear-gradient(to bottom, var(--cor-5), var(--cor-6));
   padding: 40px 20px 20px 20px;
-  border: 2px solid var(--cor-1);
+  border: 2px solid var(--cor-6);
   border-radius: 4px;
   margin-bottom: 25px;
+}
+
+.tarefas-conteudo:hover {
+  background: linear-gradient(to bottom, var(--cor-5), var(--cor-7));
+  border: 2px solid var(--cor-7);
+  transition: 0.4s;
 }
 
 .tarefas-conteudo h1 {
@@ -13,8 +19,8 @@
 }
 
 .conteudo-lista {
-  background-color: var(--cor-5);
-  border: 2px solid var(--cor-5);
+  background-color: var(--cor-7);
+  border: 2px solid var(--cor-7);
   padding: 1px;
   border-radius: 4px;
   display: grid;
@@ -24,32 +30,63 @@
 
 .conteudo-lista h3 {
   text-align: center;
-  margin: 20px 0;
-  color: var(--cor-5);
+  margin: 20px 0 40px 0;
+  color: var(--cor-8);
 }
 
 .conteudo-lista div {
   background-color: var(--cor-1);
   border-radius: 4px;
+  padding: 20px 0;
+}
+
+.tarefas li {
+  color: var(--cor-8);
+  margin-bottom: 40px;
+  display: flex;
+  gap: 12px;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 10px;
+  text-transform: capitalize;
+}
+
+.tarefas li::before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 10px;
+  background: linear-gradient(to bottom, var(--cor-2), var(--cor-4));
 }
 
 .nova-tarefa {
   display: flex;
+  flex-wrap: wrap;
   justify-content: end;
   gap: 8px;
   align-items: center;
 }
 
-.nova-tarefa input {
+#input-nova-tarefa {
+  background-color: var(--cor-1);
   width: 200px;
   padding: 5px;
   border-radius: 4px;
-  border: 10px solid var(--cor-3);
+  border: 10px solid var(--cor-6);
+  outline: none;
 }
 
-.nova-tarefa button {
-  background-color: var(--cor-1);
+#btn-nova-tarefa {
+  background: linear-gradient(to right, var(--cor-5), var(--cor-7));
+  color: var(--cor-1);
   border: none;
-  border-radius: 4px;
-  height: max-content;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+}
+
+#btn-nova-tarefa:hover {
+  background-color: var(--cor-2);
+  transition: 0.4s;
 }
