--- a/css/tarefas/tarefas.css
+++ b/css/tarefas/tarefas.css
@@ -1,15 +1,14 @@
 .tarefas-conteudo {
-  background: linear-gradient(to bottom, var(--cor-5), var(--cor-6));
+  background: linear-gradient(to bottom, var(--cor-2), var(--cor-3));
   padding: 40px 20px 20px 20px;
-  border: 2px solid var(--cor-6);
+  border: 2px solid var(--cor-3);
   border-radius: 4px;
   margin-bottom: 25px;
 }
 
 .tarefas-conteudo:hover {
-  background: linear-gradient(to bottom, var(--cor-5), var(--cor-7));
-  border: 2px solid var(--cor-7);
-  transition: 0.4s;
+  background: linear-gradient(to bottom, var(--cor-2), var(--cor-4));
+  border: 2px solid var(--cor-4);
 }
 
 .tarefas-conteudo h1 {
@@ -19,8 +18,8 @@
 }
 
 .conteudo-lista {
-  background-color: var(--cor-7);
-  border: 2px solid var(--cor-7);
+  background-color: var(--cor-4);
+  border: 2px solid var(--cor-4);
   padding: 1px;
   border-radius: 4px;
   display: grid;
@@ -31,7 +30,7 @@
 .conteudo-lista h3 {
   text-align: center;
   margin: 20px 0 40px 0;
-  color: var(--cor-8);
+  color: #000c14;
 }
 
 .conteudo-lista div {
@@ -41,52 +40,78 @@
 }
 
 .tarefas li {
-  color: var(--cor-8);
-  margin-bottom: 40px;
+  color: var(--cor-4);
+  padding: 20px;
   display: flex;
   gap: 12px;
   justify-content: space-between;
   align-items: center;
-  padding-right: 10px;
-  text-transform: capitalize;
+  text-transform: lowercase;
+  transition: 0.6s;
 }
 
-.tarefas li::before {
-  content: "";
-  display: inline-block;
-  width: 20px;
-  height: 10px;
-  background: linear-gradient(to bottom, var(--cor-2), var(--cor-4));
+.tarefas li:hover {
+  transition: 0.6s;
+  padding-left: 2rem;
 }
 
 .nova-tarefa {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: end;
-  gap: 8px;
+  justify-content: start;
+  gap: 12px;
+}
+
+.nova-tarefa .turno {
+  display: grid;
+  gap: 12px;
+}
+
+.turno > div {
+  display: flex;
   align-items: center;
+  gap: 8px;
+}
+
+.turno > div input {
+  cursor: pointer;
 }
 
 #input-nova-tarefa {
-  background-color: var(--cor-1);
+  background-color: #d6edff;
   width: 200px;
   padding: 5px;
   border-radius: 4px;
-  border: 10px solid var(--cor-6);
+  border: 10px solid var(--cor-3);
   outline: none;
 }
 
 #btn-nova-tarefa {
-  background: linear-gradient(to right, var(--cor-5), var(--cor-7));
+  background: none;
   color: var(--cor-1);
   border: none;
-  border-radius: 50%;
   height: 30px;
   width: 30px;
   cursor: pointer;
+  margin-top: 8px;
+}
+
+#btn-nova-tarefa svg {
+  align-self: center;
 }
 
 #btn-nova-tarefa:hover {
-  background-color: var(--cor-2);
-  transition: 0.4s;
+  color: var(--cor-3);
+}
+
+.btn-check {
+  background: none;
+  border: none;
+  color: var(--cor-4);
+  font-size: 1.5rem;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.btn-check:hover {
+  color: var(--cor-2);
 }
