--- a/css/utilidades/global.css
+++ b/css/utilidades/global.css
@@ -1,13 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  transition: 0.2s;
 }
 
 body {
-  background-color: var(--cor-8);
-  color: var(--cor-1);
+  background-color: var(--cor-5);
+  color: var(--cor-texto);
   box-sizing: border-box;
-  color: var(--cor-1);
 }
 
 a {
@@ -30,5 +30,5 @@ ul {
   grid-template-columns: 1fr 2fr;
   justify-content: center;
   gap: 60px;
-  margin-top: 60px;
+  margin: 60px auto;
 }
