--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+/* Utilidades */
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
 @import "./utilidades/global.css";
+@import "./utilidades/modal.css";
 
 /* menu */
 @import "./menu/menu.css";
