--- a/css/tarefas/tarefas.css
+++ b/css/tarefas/tarefas.css
@@ -41,7 +41,7 @@
 
 .tarefas li {
   color: var(--cor-4);
-  padding: 20px;
+  padding: 0 10px;
   display: flex;
   gap: 12px;
   justify-content: space-between;
@@ -50,9 +50,13 @@
   transition: 0.6s;
 }
 
+.tarefas li > div {
+  display: flex;
+}
+
 .tarefas li:hover {
   transition: 0.6s;
-  padding-left: 2rem;
+  padding-left: 1.5rem;
 }
 
 .nova-tarefa {
@@ -103,7 +107,8 @@
   color: var(--cor-3);
 }
 
-.btn-check {
+.btn-check,
+.btn-remove {
   background: none;
   border: none;
   color: var(--cor-4);
