--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -14,7 +14,12 @@
   font: 400 1rem/1.33 "Lato", sans-serif;
 }
 
-.font-texto-2-italic {
-  font: 400 1rem/1.33 "Lato", sans-serif;
-  font-style: italic;
+@media (max-width: 600px) {
+  .font-titulo-1 {
+    font: 700 2rem/1 "Nunito", sans-serif;
+  }
+
+  .font-titulo-2 {
+    font: 700 1.75rem/1 "Nunito", sans-serif;
+  }
 }
